crispy forms login

--- a/todo_project/static/css/style.css
+++ b/todo_project/static/css/style.css
@@ -21,9 +21,7 @@ body {
     -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.2);
             box-shadow: 0 0 2px rgba(0,0,0,0.2);
 }
-.btn:hover {
-    background-color: rgb(220, 160, 248);
-  }
+
 .row {
     display: block;
     padding: 10px;
@@ -209,14 +207,13 @@ button {
 [class*='category-'] {
     display: inline-block;
     font-size: 10px;
-    background: #444;
+    background: rgb(121, 197, 128);
     vertical-align: middle;
     color: #fff;
     padding: 10px;
-    width: 75px;
     text-align: center;
-    border-radius: 2px;
-    /* float: right; */
+    border-radius: 4px;
+    float: right;
     font-weight: normal;
     /* text-transform: uppercase; */
     margin-right: 20px;
