--- a/todo_project/templates/todoapp/index.html
+++ b/todo_project/templates/todoapp/index.html
@@ -21,7 +21,7 @@
                         <option class="" value="{{ category.name }}" name="{{ category.name }}">{{ category.name }}</option>
                     {% endfor %}
                     </select>
-                    <label for="category" style="color:blue">Category </label>(insert new catetory at /admin)
+                    <label for="category" style="color:blue">CATEGORY (insert new catetory at /admin)</label>
                 </div>
                 <div class="inputContainer">
                     <input type="date" id="dueDate" class="taskDate" name="date">
