password reset forms

--- a/todo_project/templates/account/login.html
+++ b/todo_project/templates/account/login.html
@@ -15,9 +15,9 @@
 				<div class="myform form ">
 					 <div class="logo mb-3">
 						 <div class="col-md-12 text-center">
-							<h1>Login to Tasks Todo</h1>
+							<h1 style="color:blue">Login to Tasks Todo</h1>
 						 </div>
-					</div>
+					 </div>
                   
                    <form class="login" method="POST" action="{% url 'account_login' %}">
                       {% csrf_token %}
