--- a/todo_project/templates/account/password_reset.html
+++ b/todo_project/templates/account/password_reset.html
@@ -1,4 +1,5 @@
-{% extends "account/base.html" %}
+{% extends "nav.html" %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 {% load account %}
@@ -6,7 +7,8 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-
+<div class="col-md-5 mx-auto">
+    <div id="first">
     <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
@@ -14,11 +16,15 @@
 
     <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
-
+        <div class="myform form ">
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input type="submit" class="btn btn-warning" value="{% trans 'Reset My Password' %}" />
+        </form>
+        </div>
+    
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    </div>
+</div>
 {% endblock %}
