ui navbar and user login,logout

--- a/todo_project/templates/account/password_reset_from_key.html
+++ b/todo_project/templates/account/password_reset_from_key.html
@@ -1,10 +1,18 @@
-{% extends "account/base.html" %}
+
+{% extends "nav.html" %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5 mx-auto">
+      <div id="first">
+        <div class="myform form ">
+          
+         
+    <h1 style="color:blue">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
@@ -13,11 +21,15 @@
         {% if form %}
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                {{ form|crispy }}
+                <input type="submit" name="action" class=" btn btn-block mybtn btn-primary tx-tfm" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
+        </div>
+        </div>
+    </div>
+</div> 
 {% endblock %}
