--- a/todo_project/templates/account/password_set.html
+++ b/todo_project/templates/account/password_set.html
@@ -1,15 +1,29 @@
-{% extends "account/base.html" %}
+{% extends "nav.html" %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Set Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5 mx-auto">
+      <div id="first">
+        <div class="myform form ">
+          <div class="logo mb-3">
+            <div class="col-md-12 text-center">
+            <h1 style="color:blue">Set Password</h1>
+            </div>
+          </div>
+         
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input type="submit" class=" btn btn-block mybtn btn-primary tx-tfm" name="action" value="{% trans 'Set Password' %}"/>
+        </form>
+        </div>
+        </div>
+    </div>
+</div> 
 {% endblock %}
