--- a/todo_project/templates/account/password_change.html
+++ b/todo_project/templates/account/password_change.html
@@ -1,15 +1,29 @@
-{% extends "account/base.html" %}
+{% extends "nav.html" %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5 mx-auto">
+      <div id="first">
+        <div class="myform form ">
+          <div class="logo mb-3">
+            <div class="col-md-12 text-center">
+            <h1 style="color:blue">Password Change</h1>
+            </div>
+          </div>
+         
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" name="action" class=" btn btn-block mybtn btn-primary tx-tfm">{% trans "Change Password" %}</button>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div> 
 {% endblock %}
