--- a/todo_project/templates/base.html
+++ b/todo_project/templates/base.html
@@ -54,8 +54,8 @@
         <li class="nav-item submenu dropdown">
             <a href="accounts/login" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login / Sign Up</a>
             <ul class="dropdown-menu">
-                <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Signup</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}" style="color:blue">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}" style="color:blue">Signup</a></li>
             </ul>
         </li> 
         {% endif %}
